--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="twitter">#55ACEE</color>
     <color name="linkedin">#287bbc</color>
     <color name="googleplus">#d34836</color>
+    <color name="instagram">#125688</color>
 </resources>
